--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">小股投</string>
     <string name="bar_home_title">小骨头</string>
+    <string name="bar_activity_title">活动</string>
+    <string name="bar_me_title">我的投资</string>
+    <string name="bar_help_title">帮助</string>
+    <string name="bar_message_title">通知</string>
+    <string name="bar_settings_title">设置</string>
+    <string name="back">返回</string>
 </resources>
